# pulseaudio-modules-droid-glue

./: README.md  configure.ac  meson.build  meson_options.txt
rpm/: pulseaudio-modules-droid-glue.spec
src/: Makefile.am  meson.build
src/glue/: Makefile.am  meson.build  module-droid-glue.c
